# submission-tools

./: .gitignore  .pre-commit-config.yaml  Appliance.Dockerfile  Makefile  README.md  app-logging.conf  app-logging.json  app.sh  conftest.py  hypercorn-config.toml  pyproject.toml
pdf_profile/: Makefile  mypy.ini  pyproject.toml
pdf_profile/src/: diff_profiles.py  pdf_profile.py  props_io.py
pdf_profile/tests/: .gitignore  test_smoke.py
pdf_profile/tests/fixture/pdf/: digest.2401.00001.yaml
preflight_parser/: Makefile  TODO  check_all_submissions.sh  pyproject.toml
preflight_parser/preflight_parser/: __init__.py  __main__.py  kpse_search.lua
preflight_parser/tests/: 00test.json  01test.json  02test.json  4290698.json  4293772.json  4339379.json  4340214.json  4340561.json  4347161.json  4365346.json  4599301.json  5770877.json  DISABLED_test_tex_inspction.py  test_base_models.py  test_preflight.py
preflight_parser/tests/00test/: Makefile  abstract.tex  abstract.txt  calligraphic.sty  closing.tex  current-macros.sty  currentbib.bib  diagonal.1  diagonal.10  diagonal.11  diagonal.12  diagonal.2  diagonal.3  diagonal.4  diagonal.5  diagonal.6  diagonal.7  diagonal.8  diagonal.9  diagonal.mp  elsart-harv.bst  elsart.cls  elsart_macros.sty  gentzen-lk.sty  herbrand-disjunction.tex  herbrand-sketches.tex  howfast.tex  introduction.tex  logic-symbols.sty  logic.sty  minimization.tex  paper.bbl  paper.tex  projective.sty  prooftree.sty  recursive.tex  sketches.tex  sv-paper.tex  testdiag.tex  world-logic-day-2022.tex
preflight_parser/tests/01test/: abstract.tex  app.tex  bio.tex  body.tex  configs.tex  main.tex  refs.bib
preflight_parser/tests/4290698/: arXivPotentialVersusGeometryRevisited.tex
preflight_parser/tests/4293772/: ieeeconf.cls  paper.bbl  paper.tex
preflight_parser/tests/4293772/bib_files/: Robust_Control.bib  Robust_Optimization.bib  System_Level_Synthesis.bib  Textbook_and_Theory.bib  control_sequences.bib  my_publications.bib
preflight_parser/tests/4293772/tex_files/: DP_algorithm.tex  abstract.tex  conclusion.tex  evaluation.tex  examples.tex  header.tex  introduction.tex  notation.tex  paper_content.tex  paper_setup.tex  preliminaries.tex  references.tex  user_defined_macros.tex
preflight_parser/tests/4339379/: IS-2022-03-0059.R1_Wickramarachchi.bbl  IS-2022-03-0059.R1_Wickramarachchi.tex  references.bib
preflight_parser/tests/4340214/: LatestVersion.tex
preflight_parser/tests/4340561/: paper-HDCO-V4-archive.tex
preflight_parser/tests/4347161/: 3DProtoPlasmic-V3.tex
preflight_parser/tests/4365346/: main.bbl  main.tex
preflight_parser/tests/4599301/: 0_document.bib  0_main.bbl  0_main.tex
preflight_parser/tests/5770877/: main.bbl  main.tex  refs.bib  settings.tex
preflight_parser/tests/5770877/pages/: abstract.tex  acknowledgements.tex  coverpage.tex  titlepage.tex
preflight_parser/tests/fixture/html_1/: paper.html
tex2pdf-service/: .gitignore  Appliance.Dockerfile  LICENSE  Makefile  app-logging.conf  mypy.ini  pyproject.toml  pytest.ini
tex2pdf-service/reports/: CONCATENATING-PDFS.md  report-202507-update-2023-2025.txt
tex2pdf-service/tests/: conftest.py  local-proxy-test-2025.env  local-proxy-test.env  test_docker.py  test_patch.py  test_sandbox.py  test_typings.py  test_watermark.py
tex2pdf-service/tex2pdf/: __init__.py  atomic.py  converter_driver.py  doc_converter.py  fastapi_util.py  log_inspection.py  pdf_checks.py  pdf_watermark.py  remote_call.py  service_logger.py  tarball.py  tex2pdf_api.py  tex_patching.py  tex_to_pdf_converters.py
tex2pdf-service/texlive/2023/: tex-packages.txt
tex2pdf-service/texlive/common/: texmf.cnf
tex2pdf-service/tools/: check-outcome-for-log-errors.sh  run-compile-submissions  scoredb-utils.ipynb  setup-like-prod.sh
tex2pdf-tools/: .gitignore  Makefile  README.md  TODO  check_all_submissions.sh  mypy.ini  pyproject.toml
tex2pdf-tools/patches/: zzrm-unused-files.patch
tex2pdf-tools/tests/directives/: test_directives.py
tex2pdf-tools/tests/preflight/: test_base_models.py  test_file_checks.py  test_kpse_search_lua.py  test_png_to_fast_copy.py  test_preflight.py  test_typings.py  test_typst.py
tex2pdf-tools/tests/preflight_parser/: test_base_models.py  test_preflight.py  test_typings.py
tex2pdf-tools/tests/tex_inspection/: test_ban.py  test_conveter_opts.py  test_typings.py
tex2pdf-tools/tests/zerozeroreadme/: test_typings.py  test_zzrm.py
tex2pdf-tools/tex2pdf_tools/: __init__.py
tex2pdf-tools/tex2pdf_tools/directives/: __init__.py  __main__.py  directives.py
tex2pdf-tools/tex2pdf_tools/preflight/: __init__.py  __main__.py  checks.py  feature_flags.py  file_checks.py  images.py  kpse_search.lua  models.py  pdf_checks.py  png_to_fast_copy.py  report.py  typst.py
tex2pdf-tools/tex2pdf_tools/preflight_parser/: TODO  __init__.py  __main__.py  kpse_search.lua
tex2pdf-tools/tex2pdf_tools/tex_inspection/: README.rst
tex2pdf-tools/tex2pdf_tools/zerozeroreadme/: __init__.py
tex2pdf_service/: .gitignore  Appliance.Dockerfile  Makefile  README.md  app-logging.conf  app-logging.json  app.sh  mypy.ini  pyproject.toml
tex2pdf_service/.run/: Template Python tests.run.xml
tex2pdf_service/tests/: conftest.py  test_conveter_opts.py  test_docker.py  test_patch.py  test_pick_package.py  test_tex_inspction.py  test_typings.py  test_watermark.py
tex2pdf_service/tex2pdf/: __init__.py  atomic.py  banned_tex.yaml  converter_driver.py  doc_converter.py  fastapi_util.py  log_inspection.py  pdf_watermark.py  remote_call.py  tarball.py  tex2pdf_api.py  tex_inspection.py  tex_patching.py  tex_to_pdf_converters.py
tex2pdf_service/texlive/2023/: tex-packages.txt  texmf.cnf
tex_inspection/: README.md  __init__.py  mypy.ini  pyproject.toml  tex_inspection.py
tex_inspection/tests/: test_ban.py  test_conveter_opts.py  test_tex_inspction.py  test_typings.py  test_zzrm.py
tex_inspection/tex_inspection/: __init__.py  tex_inspection.py
zerozeroreadme/: mypy.ini  pyproject.toml
zerozeroreadme/tests/: test_typings.py  test_zzrm.py
zerozeroreadme/zerozeroreadme/: __init__.py
(+249 files in other folders)
