[tool.poetry]
name = "pdf_profile"
version = "0.1.0"
description = "PDF profiler tool"
authors = ["Naoyuki Tai <ntai@arxiv.org>"]

[tool.poetry.dependencies]
python = "^3.10"
pikepdf = "^8.7.1"
reportlab = "^4.0.7"
ruamel-yaml = "^0.18.5"
pillow = "^10.2.0"
pymupdf = "^1.23.25"
pdf2image = "^1.17.0"
click = "^8.1.7"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
