[tool.poetry]
name = "preflight-parser"
description = "TeX and LaTeX parser"
version = "0.0.1"
authors = [ "Norbert Preining"  ]
requires-python = ">=3.11"
include = ["kpse_search.lua"]

[tool.poetry.dependencies]
chardet = "^5.0"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "^7.4.3"
mypy = "*"
mypy-extensions = "*"

[tool.ruff]
# Extend the `pyproject.toml` from the toplevel dir
extend = "../pyproject.toml"

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
