[tool.poetry]
name = "preflight-parser"
description = "TeX and LaTeX parser"
version = "0.0.1"
authors = [ "Norbert Preining"  ]
include = ["kpse_search.lua"]

[tool.poetry.dependencies]
python = "^3.11"
chardet = "^5.0"
pydantic = "==1.10.*"

[tool.poetry.group.dev.dependencies]
ruff = "*"
pytest = "^8.3.3"
mypy = "*"
mypy-extensions = "*"

[tool.ruff]
# Extend the `pyproject.toml` from the toplevel dir
extend = "../pyproject.toml"
extend-exclude = ["tests"]

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
