[tool.poetry]
name = "arxiv-tex2pdf-service"
version = "0.1.0"
description = "Compiling TeX to PDF, and provide HTTP based service"
authors = ["arxiv.org"]
packages = [
    { include = "tex2pdf" }
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pikepdf = "^8.7.1"
python-json-logger = "^2.0.7"
ruamel-yaml = "^0.18.5"
pillow = "^10.4.0"
python-multipart = "^0.0.6"
psutil = "^5.9.8"
arxiv-tex2pdf-tools = {git = "https://github.com/arXiv/submission-tools.git", subdirectory = "tex2pdf-tools", branch = "pydantic2" }
hypercorn = {extras = ["h2"], version = "^0.16.0"}
pymupdf = "^1.24.10"
requests = "^2.32.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.3"
pylint = "^3.2.7"
click = "^8.1.7"
mypy = "*"
mypy-extensions = "*"
tqdm = "^4.66.2"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
