[tool.poetry]
name = "arxiv-tex2pdf-service"
version = "0.1.0"
description = "Compiling TeX to PDF, and provide HTTP based service"
authors = ["arxiv.org"]
packages = [
    { include = "tex2pdf" }
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "*"
pikepdf = "*"
python-json-logger = "*"
ruamel-yaml = "*"
pillow = "*"
python-multipart = "*"
psutil = "*"
arxiv-tex2pdf-tools = {git = "https://github.com/arXiv/submission-tools.git", subdirectory = "tex2pdf-tools" }
hypercorn = {extras = ["h2"], version = "*"}
pymupdf = "*"
requests = "*"
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", branch = "update-pydantic" }
xmltodict = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
pylint = "*"
click = "*"
mypy = "*"
mypy-extensions = "*"
tqdm = "*"
types-requests = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
