[tool.poetry]
name = "arxiv-tex2pdf-tools"
version = "0.1.0"
description = "Base tools for arXiv's tex-to-pdf conversion service"
authors = ["Naoyuki Tai <ntai@arxiv.org>", "Norbert Preining <norbert@arxiv.org>"]
packages = [
    { include = "tex2pdf_tools" }
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.11"
pydantic = "*"
ruamel-yaml = "*"
toml = "*"
tomli_w = "*"

[tool.poetry.group.dev.dependencies]
ruff = "0.12.*"
pytest = "*"
pytest-cov = "*"
mock = "*"
mypy = "*"
mypy-extensions = "*"
types-toml = "*"
click = "*"
tqdm = "*"
pre-commit = "*"

[tool.ruff]
# Extend the `pyproject.toml` from the toplevel dir
extend = "../pyproject.toml"
extend-exclude = ["tests"]

[tool.black]
line-length = 120

[tool.pylint]
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--cov=tex2pdf_tools --cov-fail-under=70"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"


