[tool.poetry]
name = "tex2pdf"
version = "0.1.0"
description = "Compiling TeX to PDF"
authors = ["Naoyuki Tai <ntai@arxiv.org>"]
packages = [
    { include = "tex2pdf"}
]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
arxiv-base = {git = "https://github.com/arXiv/arxiv-base.git", rev = "1.0.1"}
pikepdf = "^8.7.1"
reportlab = "^4.0.7"
python-json-logger = "^2.0.7"
ruamel-yaml = "^0.18.5"
pillow = "^10.2.0"
python-multipart = "^0.0.6"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
