[tool.poetry]
name = "arxiv-tex2pdf"
version = "0.1.0"
description = "Compiling TeX to PDF, and provide HTTP based service"
authors = ["arxiv.org"]
packages = [
    { include = "tex2pdf" }
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
pikepdf = "^8.7.1"
reportlab = "^4.0.7"
python-json-logger = "^2.0.7"
ruamel-yaml = "^0.18.5"
pillow = "^10.2.0"
python-multipart = "^0.0.6"
granian = "^1.1.1"
psutil = "^5.9.8"
tex_inspection = {git = "https://github.com/arXiv/submission-tools.git", subdirectory = "tex_inspection"}

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pylint = "^3.0.2"
click = "^8.1.7"
mypy = "*"
mypy-extensions = "*"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
