[tool.poetry]
name = "arxiv-tex2pdf"
version = "0.1.0"
description = "Compiling TeX to PDF, and provide HTTP based service"
authors = ["arxiv.org"]
packages = [
    { include = "tex2pdf" }
]
include = ["LICENSE", "README.md"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.104.1"
pikepdf = "^8.7.1"
python-json-logger = "^2.0.7"
ruamel-yaml = "^0.18.5"
pillow = "^10.2.0"
python-multipart = "^0.0.6"
psutil = "^5.9.8"
tex_inspection = {git = "https://github.com/arXiv/submission-tools.git", subdirectory = "tex_inspection"}
preflight_parser = {git = "https://github.com/arXiv/submission-tools.git", subdirectory = "preflight_parser"}
zerozeroreadme = {git = "https://github.com/arXiv/submission-tools.git", subdirectory = "zerozeroreadme"}
hypercorn = {extras = ["h2"], version = "^0.16.0"}
pymupdf = "^1.24.9"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
pylint = "^3.2.6"
click = "^8.1.7"
mypy = "*"
mypy-extensions = "*"
tqdm = "^4.66.2"
uvicorn = "^0.29.0"
requests = "^2.31.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
